<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:name="com.google.android.gms.maps.SupportMapFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <fragment
        android:id="@+id/map"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        map:layout_constraintBottom_toBottomOf="parent"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        map:layout_constraintEnd_toEndOf="parent"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent"
        tools:context=".MapsActivity"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#ACC12F"
        android:onClick="addNovoReport"
        android:src="@drawable/ic_add_24"
        map:layout_constraintBottom_toBottomOf="parent"
        map:layout_constraintEnd_toEndOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/logoutFab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#ACC12F"
        android:onClick="logout"
        android:src="@drawable/ic_baseline_exit_to_app_24"
        map:layout_constraintBottom_toTopOf="@+id/fab"
        map:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="140dp"
        android:layout_marginLeft="5dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp"
        map:layout_constraintBottom_toBottomOf="@+id/map"
        map:layout_constraintStart_toStartOf="parent"
        map:layout_constraintTop_toTopOf="parent">


        <CheckBox
            android:id="@+id/checkBoxAcidente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:buttonTint="#ACC12F"
            android:checked="true"
            android:text="@string/tipo_acidente" />

        <CheckBox
            android:id="@+id/checkBoxObras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:buttonTint="#ACC12F"
            android:checked="true"
            android:text="@string/tipo_obras" />

        <CheckBox
            android:id="@+id/checkBoxBuraco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:buttonTint="#ACC12F"
            android:checked="true"
            android:text="@string/tipo_buraco" />


        <com.google.android.material.slider.Slider
            android:id="@+id/distanciaSli"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:valueFrom="0.0"
            android:valueTo="600000.0"
            app:thumbColor="#ACC12F"
            app:trackColorActive="#ACC12F"
            app:trackColorInactive="#e6ecc0" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>